fix: fix overflow the content area

--- a/src/scss/component/_wordpress.scss
+++ b/src/scss/component/_wordpress.scss
@@ -6,6 +6,10 @@
 	background-color: transparent;
 }
 
+.wp-caption {
+	max-width: 100%;
+}
+
 .wp-caption-text {
 	color: #666;
 }
